fix image: blog, vision MOBILE

--- a/client/src/resources/styles/blogstyle.css
+++ b/client/src/resources/styles/blogstyle.css
@@ -5,7 +5,7 @@ body {
 }
 
 .header-blog {
-	background-image: url("../../components/images/header_blog23.jpg");
+	background-image: url("../../components/images/header_blog23.webp");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
